# edge-ai-chat

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
app/src/main/java/com/edgeai/chat/: MainActivity.kt
app/src/main/java/com/edgeai/chat/database/: AppDatabase.kt  ChatDao.kt  ChatMessage.kt  ChatSession.kt
app/src/main/java/com/edgeai/chat/llama/: LlamaModel.kt
app/src/main/java/com/edgeai/chat/repository/: ChatRepository.kt
app/src/main/java/com/edgeai/chat/settings/: AppSettings.kt  SettingsRepository.kt
app/src/main/java/com/edgeai/chat/ui/: Navigation.kt
app/src/main/java/com/edgeai/chat/ui/screens/: MainScreen.kt  ModelManagementScreen.kt  SettingsScreen.kt
app/src/main/java/com/edgeai/chat/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/edgeai/chat/utils/: FileUtils.kt
app/src/main/java/com/edgeai/chat/viewmodel/: ChatViewModel.kt
app/src/main/repository/: ChatRepository.kt
app/src/main/res/values/: themes.xml
